--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,8 @@
 
 .body{
   font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: .03em;
   color: var(--text-color);
   background-color: var(--white-color);
 }
@@ -14,6 +16,11 @@ address{
   font-style: normal;
 }
   
+.main{
+  min-width: 480px;
+// min-width: 100%;
+}
+
 img{
   display: block;
   max-width: 100%;
@@ -33,6 +40,8 @@ a:focus{
   
 ul{
   padding: 0;
+  margin: 0;
+  list-style: none;
 }
   
 li{
@@ -40,10 +49,14 @@ li{
 }
   
 .container{
+  // min-width: 320px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 0;
+  padding-bottom: 0;
   margin-left: auto;
   margin-right: auto;
+
 
   @media screen and (min-width: 480px){
       width: 480px;
@@ -59,8 +72,13 @@ li{
 }
 
 .section{
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px){
   padding-top: 94px;
   padding-bottom: 94px;
+  }
 }
 
 .secondary-title{
