--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -18,10 +18,10 @@
 }
 
 .advantage__button{
-  padding-left: 190px;
-  padding-right: 190px;
+  padding-left: auto;
+  padding-right: auto;
   border: none;
-  // width: 450px;
+  width: 100%;
   height: 120px;
   color: #212121;
   background: #F5F4FA;
