--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,22 +1,28 @@
 
 .hero{
-    max-width: 480px;
+    max-width: 1600px;
+    margin: 0 auto;
     padding-top: 118px;
     padding-bottom: 118px;
-    align-items: center;
     text-align: center;
+}
+
+.hero-background{
+    
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--section-color);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/header_bg/header-img_sm@1x.jpg);
+    url(../../images/header_bg/header-img_sm@1x.jpg);
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/header_bg/header-img_sm@2x.jpg);
+        url(../../images/header_bg/header-img_sm@2x.jpg);
     }
 
     @media screen and (min-width: 480px){
@@ -26,12 +32,12 @@
     @media screen and (min-width: 768px){
         max-width: 1199px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/header_bg/header-img_md@1x.jpg);
+        url(../../images/header_bg/header-img_md@1x.jpg);
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/header_bg/header-img_md@2x.jpg);
+        url(../../images/header_bg/header-img_md@2x.jpg);
         }
     }
 
@@ -41,18 +47,19 @@
         padding-bottom: 200px;
 
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/header_bg/header-img_lg@1x.jpg);
+        url(../../images/header_bg/header-img_lg@1x.jpg);
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/header_bg/header-img_lg@2x.jpg);
+        url(../../images/header_bg/header-img_lg@2x.jpg);
         }
     }
 }
 
 .hero__title{
     width: 360px;
+    margin-top: 0;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
