--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -54,9 +54,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    padding: 32px;
+    width: 100%;
+    height: 100%;
+    padding: 48px 40px;
     background-color: var(--white-color);
     z-index: 999;
   
@@ -65,9 +65,8 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;;
-    font-weight: 500;
-    letter-spacing: 0.02em;
+    // font-weight: 500;
+    // letter-spacing: 0.02em;
 
     &.is-open {
       transform: translateX(0);
@@ -78,23 +77,18 @@
     position: absolute;
     top: 16px;
     right: 16px;
-    color: #fff;
+    color: var(--white-color);
 }
   
 .mobile-menu{
     padding: 0;
-    padding-left: 40px;
     margin: 0;
     list-style: none;
 }
-
-.mobile__link{
-  padding-bottom: 32px;
-}
   
-.mobile-menu .link {
+.mobile-menu .mobile__link {
     display: block;
-    padding: 10px;
+    padding: 16px 0;
     text-decoration: none;
 }
 
@@ -108,42 +102,59 @@
 }
 
 .mobile__contacts{
-  padding-left: 40px;
+  // padding-left: 40px;
+  display: flex;
+  margin-top: auto;
+}
+
+.tel-mail{
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile__tel{
+  display: flex;
+  padding: 16px 0;
   font-size: 34px;
-  line-height: 40px;
+  line-height: 1.18;
   color: var(--hover-color);
 }
 
 .mobile__mail{
+  display: flex;
+  padding: 16px 0;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.17;
   color: var(--text-color);
-  
 }
 
 .mobile__list{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  margin-top: 64px;
 
 }
 
 .mobile__social{
+  position: relative;
+  
+  &:not(:last-child){
+    margin-right: 20px;
+  }
+  
+  &:not(:first-child)::before{
+    content: " ";
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    left: -10px;
+    background-color: rgba(33, 33, 33, 0.2);
+  }
+}
+
+.mobile__media{
+  display: block;
   font-size: 18px;
   line-height: 1.22;
   color: var(--hover-color);
-  
-  &::after{
-    content: " ";
-    width: 22px;
-    height: 0px;
-    left: 135px;
-    top: 726px;
-    margin-left: 10px;
-  
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-  }
 }
