--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -140,9 +140,9 @@ textarea{
     height: 120px;
     background-repeat: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     padding: 12px 16px;
     font-style: normal;
-    font-weight: bold;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
