--- a/sass/portfolio/_portfolio.scss
+++ b/sass/portfolio/_portfolio.scss
@@ -1,4 +1,13 @@
 
+.portfolio-container{
+    display: flex;
+    flex-wrap: wrap;
+
+    // @media (max-width: 479px){
+    //     width: 100%;
+    // }
+}
+
 .button{
     padding: 6px 22px;
     font-weight: 500;
@@ -21,25 +30,37 @@
 }
   
 .button__filter{
+    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 34px;
-    margin: 0;
+    // justify-content: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+    // margin-bottom: 40px;
+    padding-bottom: 16px;
+    margin-bottom: 24px;
+    column-gap: 8px;
+    row-gap: 15px;
     
     @media (min-width: 480px){
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
+        
     }
 
     @media (min-width: 768px){
-        display: flex;
         justify-content: center;
+        margin-bottom: 30px;
     }
     
     @media (min-width: 1200px){
-        display: flex;
+        margin-bottom: 34px;
     }
+
+    // @media (max-width: 767px){
+    //     column-gap: 8px;
+    //     row-gap: 15px;
+    // }
 
     & :not(:last-child){
         margin-right: 8px;
@@ -72,7 +93,8 @@
 
 .projects__item{
     width: 450px;
-    margin: 15px;
+
+    // margin: 15px;
     
     @media (min-width: 768px){
         // width: 354px;
@@ -83,6 +105,10 @@
     @media (min-width: 1200px){
         // width: 370px;
         width: calc((100% - 6 * 15px) / 3) ;
+    }
+
+    &:not(:last-child){
+        margin-bottom: 30px;
     }
 }
   
