--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -52,8 +52,8 @@ li{
   // min-width: 320px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 0;
-  padding-bottom: 0;
+  // padding-top: 0;
+  // padding-bottom: 0;
   margin-left: auto;
   margin-right: auto;
 
