--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,19 +1,21 @@
 
 .hero{
-    max-width: 1600px;
-    margin: 0 auto;
+    // max-width: 1600px;
+    // margin: 0 auto;
     padding-top: 118px;
     padding-bottom: 118px;
     text-align: center;
-}
+// }
 
-.hero-background{
-    
+// .hero-background{
+    width:100vw;
+    max-width: 479px;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--section-color);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 480px 400px;
     background-size: cover;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -31,6 +33,7 @@
 
     @media screen and (min-width: 768px){
         max-width: 1199px;
+        // background-size: 768px 400px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../../images/header_bg/header-img_md@1x.jpg);
         @media (min-device-pixel-ratio: 2),
@@ -45,6 +48,7 @@
         max-width: 1600px;
         padding-top: 200px;
         padding-bottom: 200px;
+        // background-size: 1600px 600px;
 
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../../images/header_bg/header-img_lg@1x.jpg);
