--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,47 +12,67 @@
 }
 
 .contacts{
+    display: flex;
 
-    @media (max-width: 767px){
-        display: none;
+    @media screen and (max-width: 767px){
+        margin-top: auto;
     }
 
-    @media (min-width: 768px){
-        // display: block;
-        margin-left: auto;    
+    @media screen and (min-width: 768px) and (max-width: 1199px){
+        flex-direction: column;
+        margin-left: 90px;
+        gap: 10px;         
+        margin-right: 0px;
+          
     }
 
-    @media (min-width: 1200px){
-        display: flex;
+    @media screen and (min-width: 1200px){
+        flex-direction: row;
         margin-left: auto;
+        gap: 0;
+        align-items: baseline;
     }
 }
   
-.contacts :not(:last-child){
-    margin-right: 30px;
-}
+
+// .contacts :not(:last-child){
+//     margin-right: 30px;
+// }
 
 .contact__item{
-    display: flex;
-    align-items: center;
-    color: var(--text-color);
+    display: none;
+    // align-items: center;
+    // padding: 16px 0;
+    // color: var(--text-color);
 
-    @media (min-width: 768px){
-        font-style: 12px;
-        line-height: 1.17;    
+    @media screen and (min-width: 768px){
+        display: block;
+        font-size: 12px;
+        line-height: 1.17;
+        color: var(--text-color);    
     }
 
-    @media (min-width: 1200px){
-        font-style: 14px;
-        line-height: 1.14;    
+    @media screen and (min-width: 1200px){
+        font-size: 14px;
+        line-height: 1.14;
+        
+        &:not(:first-child){
+        margin-left: 30px;    
+        }
     }
 }
 
 .envelope{
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
+    width: 14px;
+    height: 10px;
+    margin-right: 8px;
     
+    @media screen and (min-width: 1200px){
+        width: 16px;
+        height: 12px;
+        margin-right: 10px;
+    }
+
   &:hover,
   &:focus{
     fill: var(--hover-color);
@@ -63,8 +83,14 @@
     
 .smartfone{
     width: 10px;
-    height: 16px;
-    margin-right: 10px;
+    height: 14px;
+    margin-right: 8px;
+
+    @media screen and (min-width: 1200px){
+        width: 10px;
+        height: 16px;
+        margin-right: 10px;
+    }
   
   &:hover,
   &:focus{
