--- a/sass/portfolio/_portfolio.scss
+++ b/sass/portfolio/_portfolio.scss
@@ -2,10 +2,6 @@
 .portfolio-container{
     display: flex;
     flex-wrap: wrap;
-
-    // @media (max-width: 479px){
-    //     width: 100%;
-    // }
 }
 
 .button{
@@ -32,35 +28,29 @@
 .button__filter{
     display: flex;
     flex-wrap: wrap;
-    // justify-content: flex-start;
     margin-left: auto;
     margin-right: auto;
-    // margin-bottom: 40px;
     padding-bottom: 16px;
     margin-bottom: 24px;
     column-gap: 8px;
     row-gap: 15px;
+    width: 100%;
+    max-width: 479px;
     
-    @media (min-width: 480px){
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        
+    @media screen and (min-width: 480px){
+        max-width: 676px;
+        justify-content: flex-start;   
     }
 
-    @media (min-width: 768px){
+    @media screen and (min-width: 768px){
         justify-content: center;
+        max-width: 1199px;
         margin-bottom: 30px;
     }
     
-    @media (min-width: 1200px){
+    @media screen and (min-width: 1200px){
         margin-bottom: 34px;
     }
-
-    // @media (max-width: 767px){
-    //     column-gap: 8px;
-    //     row-gap: 15px;
-    // }
 
     & :not(:last-child){
         margin-right: 8px;
@@ -79,36 +69,30 @@
     margin: 0;
     padding: 0;
 
-    @media (min-width: 768px){
+    @media screen and (min-width: 768px){
         display: flex;
         flex-wrap: wrap;
         margin: -15px;
     }
-    
-    // @media (min-width: 1200px){
-    //     display: flex;
-    //     flex-wrap: wrap;
-    // }
 }
 
 .projects__item{
-    width: 450px;
-
-    // margin: 15px;
-    
-    @media (min-width: 768px){
-        // width: 354px;
+    width: 100%;
+    max-width: 479px;
+   
+    @media screen and (min-width: 768px){
         margin: 15px;
         width: calc((100% - 4 * 15px) / 2) ;
     }
     
-    @media (min-width: 1200px){
-        // width: 370px;
+    @media screen and (min-width: 1200px){
         width: calc((100% - 6 * 15px) / 3) ;
     }
 
     &:not(:last-child){
-        margin-bottom: 30px;
+        @media screen and (max-width: 767px){
+            margin-bottom: 30px;
+        }
     }
 }
   
@@ -162,6 +146,8 @@
 }
 
 .project__name{
+    width: 100%;
+    max-width: 450px;
     margin: 0;
     padding-top: 20px;
     padding-bottom: 4px;
