--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ li {
 }
 
 .container {
+  width: 100vw;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -107,11 +108,17 @@ li {
   margin: 0;
   padding: 0;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--name-color);
+}
+@media screen and (min-width: 1200px) {
+  .secondary-title {
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .title-name {
@@ -130,6 +137,15 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
+  margin: -15px;
+}
+@media screen and (max-width: 767px) {
+  .advantage,
+.work,
+.team,
+.clients {
+    display: block;
+  }
 }
 @media screen and (min-width: 768px) {
   .advantage,
@@ -462,9 +478,9 @@ li {
   position: fixed;
   top: 0;
   left: 0;
+  padding: 48px 40px;
   width: 100%;
   height: 100%;
-  padding: 48px 40px;
   background-color: var(--white-color);
   z-index: 999;
   -webkit-transform: translateX(100%);
@@ -498,6 +514,11 @@ li {
   margin: 0;
   list-style: none;
 }
+@media screen and (max-width: 479px) {
+  .mobile__menu {
+    width: 100vw;
+  }
+}
 
 .mobile__menu .mobile__link {
   display: block;
@@ -519,6 +540,7 @@ li {
     width: 100%;
   }
 }
+
 @media screen and (max-width: 767px) {
   .burger {
     display: -webkit-box;
@@ -597,14 +619,17 @@ li {
 }
 
 .hero {
+  background-color: var(--section-color);
+}
+.hero__content {
+  max-width: 1600px;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   max-width: 479px;
   margin-left: auto;
   margin-right: auto;
-  background-color: var(--section-color);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 480px 400px;
@@ -613,31 +638,31 @@ li {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header_bg/header-img_sm@1x.jpg);
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .hero {
+  .hero__content {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header_bg/header-img_sm@2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header_bg/header-img_sm@2x.jpg);
   }
 }
 @media screen and (min-width: 480px) {
-  .hero {
+  .hero__content {
     max-width: 767px;
   }
 }
 @media screen and (min-width: 768px) {
-  .hero {
+  .hero__content {
     max-width: 1199px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header_bg/header-img_md@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header_bg/header-img_md@1x.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .hero {
+  .hero__content {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header_bg/header-img_md@2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header_bg/header-img_md@2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
-  .hero {
+  .hero__content {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -646,12 +671,11 @@ li {
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .hero {
+  .hero__content {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/header_bg/header-img_lg@2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/header_bg/header-img_lg@2x.jpg);
   }
 }
-
 .hero__title {
   width: 360px;
   margin-top: 0;
@@ -673,7 +697,6 @@ li {
     line-height: 1.36;
   }
 }
-
 .hero__button {
   padding: 10px 24px;
   font-weight: 700;
@@ -968,7 +991,13 @@ textarea:hover {
 }
 
 .advantage__name {
-  width: 100%;
+  border-radius: 4px;
+}
+@media screen and (max-width: 767px) {
+  .advantage__name {
+    width: 100vw;
+    max-width: 450px;
+  }
 }
 @media screen and (min-width: 768px) {
   .advantage__name {
@@ -987,30 +1016,33 @@ textarea:hover {
   }
 }
 
-.advantage__button {
-  padding-left: auto;
-  padding-right: auto;
+.advantage__cards {
   border: none;
-  width: 100%;
+  text-align: center;
   height: 120px;
   color: #212121;
   background: #F5F4FA;
   border-radius: 4px;
+  margin-bottom: 30px;
+  padding-top: 25px;
 }
 @media screen and (min-width: 480px) {
-  .advantage__button {
+  .advantage__cards {
+    max-width: 450px;
     padding-left: 190px;
     padding-right: 190px;
   }
 }
 @media screen and (min-width: 768px) {
-  .advantage__button {
+  .advantage__cards {
+    max-width: 354px;
     padding-left: 142px;
     padding-right: 142px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .advantage__button {
+  .advantage__cards {
+    max-width: 270px;
     padding-left: 100px;
     padding-right: 100px;
   }
@@ -1043,6 +1075,8 @@ textarea:hover {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  width: 100%;
+  max-width: 450px;
 }
 
 .work__photo {
@@ -1084,6 +1118,8 @@ textarea:hover {
 
 .team__photo {
   margin: 15px;
+  width: 100vw;
+  max-width: 450px;
 }
 @media screen and (min-width: 768px) {
   .team__photo {
@@ -1184,7 +1220,7 @@ textarea:hover {
 }
 
 .regular-clients {
-  padding-top: 60px;
+  margin-bottom: 50px;
 }
 
 .our-clients {
@@ -1194,36 +1230,42 @@ textarea:hover {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-bottom: 60px;
-  margin-top: 30px;
 }
 @media screen and (min-width: 1200px) {
   .our-clients {
-    margin-top: 50px;
-    margin-bottom: 94px;
+    margin: 0;
   }
 }
 
 .clients__name {
-  max-width: 210px;
-  height: 92px;
-  margin-right: 30px;
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  margin: 15px;
-  width: calc((100% - 60px) / 2);
+  display: block;
+  margin: 0;
+  padding: 0;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .clients__name {
     margin: 15px;
-    width: calc((100% - 90px) / 3);
-    max-width: 226px;
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients__name {
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
   }
 }
 @media screen and (min-width: 1200px) {
   .clients__name {
     margin: 15px;
-    width: calc((100% - 180px) / 6);
-    max-width: 170px;
+    width: 170px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item + .clients__item {
+    margin-left: 30px;
   }
 }
 
@@ -1237,22 +1279,19 @@ textarea:hover {
 }
 
 .client__link {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: block;
+  padding: 16px 0px;
+  height: 92px;
+  text-decoration: none;
+  fill: #AFB1B8;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
 }
 
 .clients__icon {
-  width: 106px;
-  height: 60px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   fill: #AFB1B8;
 }
 
@@ -1309,11 +1348,9 @@ textarea:hover {
           column-gap: 8px;
   row-gap: 15px;
   width: 100%;
-  max-width: 479px;
 }
 @media screen and (min-width: 480px) {
   .button__filter {
-    max-width: 676px;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -1364,8 +1401,8 @@ textarea:hover {
 }
 
 .projects__item {
-  width: 100%;
-  max-width: 479px;
+  width: 100vw;
+  max-width: 450px;
 }
 @media screen and (min-width: 768px) {
   .projects__item {
@@ -1433,7 +1470,7 @@ textarea:hover {
 }
 
 .project__name {
-  width: 100%;
+  width: 100vw;
   max-width: 450px;
   margin: 0;
   padding-top: 20px;
@@ -1644,8 +1681,8 @@ textarea:hover {
 }
 
 .subscribe__input {
-  width: 100%;
-  width: 450px;
+  width: 100vw;
+  max-width: 450px;
   height: 50px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
