--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,25 +49,23 @@ li{
 }
   
 .container{
-  // min-width: 320px;
+  width: 100vw;
   padding-left: 15px;
   padding-right: 15px;
-  // padding-top: 0;
-  // padding-bottom: 0;
   margin-left: auto;
   margin-right: auto;
 
 
   @media screen and (min-width: 480px){
-      width: 480px;
+    width: 480px;
   };
 
   @media screen and (min-width: 768px){
-      width: 768px;
+    width: 768px;
   };
 
   @media screen and (min-width: 1200px){
-      width: 1200px;
+    width: 1200px;
   };
 }
 
@@ -76,8 +74,8 @@ li{
   padding-bottom: 60px;
 
   @media screen and (min-width: 1200px){
-  padding-top: 94px;
-  padding-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -85,11 +83,16 @@ li{
   margin: 0;
   padding: 0;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--name-color);
+
+  @media screen and (min-width: 1200px){
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .title-name{
@@ -108,16 +111,21 @@ li{
   margin: 0;
   padding: 0;
   list-style: none;
+  margin: -15px;
+
+  @media screen and (max-width: 767px){
+  display: block;
+  }
 
   @media screen and (min-width: 768px){
-      display: flex;
-      flex-wrap: wrap;
-      margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
   };
 }
 
 .our-work{
-    @media screen and (max-width: 1199px){
-      display: none;
+  @media screen and (max-width: 1199px){
+    display: none;
   }
 }
