--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,42 +1,54 @@
 
 .regular-clients{
-    padding-top: 60px;
+    margin-bottom: 50px;
 }
 
 .our-clients{
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 60px;
-    margin-top: 30px;
+    // margin-top: 30px;
     
     @media screen and (min-width: 1200px){
-        margin-top: 50px;
-        margin-bottom: 94px;
+        margin: 0;
+        // margin-bottom: 94px;
     }
 }
 
 .clients__name{
-    max-width: 210px;
-    height: 92px;
-    margin-right: 30px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
+    // width: 170px;
+    // height: 92px;
+    // margin-right: 30px;
+    // border: 1px solid #AFB1B8;
+    // border-radius: 4px;
 
-    margin: 15px;
-    width: calc((100% - 4 * 15px) / 2) ;
+    display: block;
+    margin: 0;
+    padding: 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 767px){
         margin: 15px;
-        width: calc((100% - 6 * 15px) / 3) ;
-        max-width: 226px;
+        flex-basis: calc((100% - 4 * 15px) / 2) ;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px){
+        margin: 15px;
+        flex-basis: calc((100% - 6 * 15px) / 3) ;
+        // max-width: 226px;
     };
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
         margin: 15px;
-        width: calc((100% - 12 * 15px) / 6) ;
-        max-width: 170px;
+        // flex-basis: calc((100% - 12 * 15px) / 6) ;
+        width: 170px;
     };
 }
+
+.clients__item+.clients__item{
+    @media screen and (min-width: 1200px) {
+        margin-left: 30px;
+    }
+} 
     
 .clients__name:hover,
 .clients__name:focus{
@@ -46,16 +58,27 @@
 }
   
 .client__link{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // width: 100%;
+    // max-width: 170px;
+    // height: 100%;
+
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    display: block;
+    padding: 16px 0px;
+    height: 92px;
+    text-decoration: none;
+    fill: #AFB1B8;;
+    border: 1px solid #AFB1B8;;
+    border-radius: 4px;
+
 }
   
 .clients__icon{
-    width: 106px;
-    height: 60px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     fill: #AFB1B8;
 }
   
