--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,18 +1,18 @@
 
 .hero{
-    // max-width: 1600px;
-    // margin: 0 auto;
+    background-color: var(--section-color);
+
+
+&__content{    
+    max-width: 1600px;
     padding-top: 118px;
     padding-bottom: 118px;
     text-align: center;
-// }
 
-// .hero-background{
-    width:100vw;
+    width:100%;
     max-width: 479px;
     margin-left: auto;
-    margin-right: auto;
-    background-color: var(--section-color);
+    margin-right: auto;   
     background-position: center;
     background-repeat: no-repeat;
     background-size: 480px 400px;
@@ -33,7 +33,6 @@
 
     @media screen and (min-width: 768px){
         max-width: 1199px;
-        // background-size: 768px 400px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../../images/header_bg/header-img_md@1x.jpg);
         @media (min-device-pixel-ratio: 2),
@@ -48,8 +47,6 @@
         max-width: 1600px;
         padding-top: 200px;
         padding-bottom: 200px;
-        // background-size: 1600px 600px;
-
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../../images/header_bg/header-img_lg@1x.jpg);
         @media (min-device-pixel-ratio: 2),
@@ -61,7 +58,7 @@
     }
 }
 
-.hero__title{
+&__title{
     width: 360px;
     margin-top: 0;
     margin-bottom: 30px;
@@ -82,7 +79,7 @@
     }
 }
 
-.hero__button{
+&__button{
     padding: 10px 24px;
     font-weight: 700;
     font-size: 16px;
@@ -97,4 +94,5 @@
     @media screen and (min-width: 1200px){
         padding: 10px 32px;
     }
+}
 }
