--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -3,8 +3,9 @@
   border-radius: 4px;
 
   @media screen and (max-width: 767px){
-  width:100vw;
-  max-width: 450px;
+    width:100vw;
+    max-width: 450px;
+    margin: 15px;
   }
 
   @media screen and (min-width: 768px){
