--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,8 +7,12 @@
 }
 
 .footer__container{
-    width: 100%;
-    max-width: 479px;
+
+    @media screen and (max-width: 479px){
+        width: 100%;
+    }
+    // width: 100vw;
+    // max-width: 479px;
 
     @media screen and (min-width: 480px) and (max-width: 767px){
         max-width: 767px;
@@ -98,10 +102,10 @@
     background-color: rgba(255, 255, 255,0.1);
     border-radius: 50%;
     margin-right: 10px;
-}
   
-.footer__icons:last-child{
-    margin-right: 0;
+    &:last-child{
+        margin-right: 0;
+    }
 }
 
 .block{
