--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,14 +3,13 @@
     position: relative;
     min-width: 480px;
     // padding: 24px 0;
-}
 
-.header__border{
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: #ECECEC;
+    &__border{
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: #ECECEC;
+    }
 }
-
 .contacts{
     display: flex;
 
@@ -22,8 +21,7 @@
         flex-direction: column;
         margin-left: 90px;
         gap: 10px;         
-        margin-right: 0px;
-          
+        margin-right: 0px;   
     }
 
     @media screen and (min-width: 1200px){
@@ -33,7 +31,6 @@
         align-items: baseline;
     }
 }
-  
 
 // .contacts :not(:last-child){
 //     margin-right: 30px;
