--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -19,15 +19,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
   
-    min-width: 450px;
-    min-height: 609px;
+    width: 450px;
+    height: 609px;
     background-color: var(--white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
     @media screen and (min-width: 1200px){
-        min-width: 528px;
-        min-height: 581px;
+        width: 528px;
+        height: 581px;
     }
 }
   
@@ -105,7 +105,7 @@
 }
 
 .form__input{
-    width: 448px;
+    width: 370px;
     height: 40px;
     padding: 10px;
     padding-left: 42px;
@@ -115,7 +115,11 @@
     outline: none;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
+
+    @media screen and (min-width: 1200px){
+        width: 448px;
+    }
+
     &:hover,
     &:focus{
         border-color: var(--hover-color);
@@ -169,8 +173,12 @@ textarea{
     height: 1px;
     position: absolute;
     right: 0;
-    bottom: 6px;
+    bottom: 1px;
     background-color: var(--hover-color);
+
+    @media screen and (min-width: 1200px){
+        bottom: 6px;
+    }
 }
   
 .modal-button{
@@ -202,10 +210,15 @@ textarea{
     align-items: center; 
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     padding-left: 12px;
+
+    @media screen and (min-width: 1200px){
+        font-size: 14px;
+        line-height: 1.71;
+    }
 } 
 
 .checkbox-agree .icon-wrapper{ 
