--- a/css/main.css
+++ b/css/main.css
@@ -1164,6 +1164,12 @@ textarea:hover {
   border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (max-width: 479px) {
+  .team__image {
+    width: 100vw;
+  }
+}
+
 .team__name {
   font-weight: 500;
   font-size: 16px;
@@ -1434,6 +1440,12 @@ textarea:hover {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .project__image {
+    width: 100vw;
+  }
+}
+
 .shadow {
   position: relative;
   overflow: hidden;
@@ -1594,7 +1606,7 @@ textarea:hover {
 .footer__adress {
   font-size: 14px;
   line-height: 1.71;
-  padding-bottom: 9px;
+  padding-bottom: 8px;
   letter-spacing: 0.03em;
   color: var(--white-color);
 }
@@ -1648,6 +1660,8 @@ textarea:hover {
     padding-bottom: 0;
     padding-top: 10px;
     padding-right: 93px;
+    margin-top: 6px;
+    margin-bottom: 6px;
     text-align: left;
   }
 }
@@ -1661,13 +1675,13 @@ textarea:hover {
 }
 
 .footer__form {
-  padding-top: 10px;
   text-align: center;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__form {
     margin-left: auto;
     margin-right: auto;
+    padding-top: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1675,6 +1689,8 @@ textarea:hover {
     display: block;
     text-align: left;
     margin-left: auto;
+    padding-top: 0px;
+    padding-bottom: 10px;
   }
 }
 
