--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -24,9 +24,14 @@
 }
 
 .team__border{
-    // width: 100vw;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); 
     border-radius: 0px 0px 4px 4px;
+}
+
+.team__image{
+    @media screen and (max-width: 479px){
+        width: 100vw;
+    }
 }
 
 .team__name{
